--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,9 +94,10 @@ header {
 }
 .contents-item {
   float:left;
-  padding:33px 50px 33px 25px;
+  padding:33px 20px 33px 25px;
   margin-right:20px;
   margin-left:50px;
+  align-content: center;
 }
 
 .contents-item h4{
