--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,9 +134,11 @@ header {
 }
 .product h2{
   color: #f7f7f7;
+  opacity: 0;
 }
 .product h3{
   color: #f7f7f7;
+  opacity: 0;
 }
 .container1 {
   margin: 0 auto;
